logs/dag_id=run_notebook_and_return_first_5_rows/run_id=manual__2024-08-27T02:39:17.051240+00:00/task_id=print_first_5_rows_task/attempt=1.log
[2024-08-27T09:39:27.508+0700] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-08-27T09:39:27.516+0700] {taskinstance.py:2603} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: run_notebook_and_return_first_5_rows.print_first_5_rows_task manual__2024-08-27T02:39:17.051240+00:00 [queued]>
[2024-08-27T09:39:27.520+0700] {taskinstance.py:2603} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: run_notebook_and_return_first_5_rows.print_first_5_rows_task manual__2024-08-27T02:39:17.051240+00:00 [queued]>
[2024-08-27T09:39:27.520+0700] {taskinstance.py:2856} INFO - Starting attempt 1 of 2
[2024-08-27T09:39:27.533+0700] {taskinstance.py:2879} INFO - Executing <Task(PythonOperator): print_first_5_rows_task> on 2024-08-27 02:39:17.051240+00:00
[2024-08-27T09:39:27.538+0700] {standard_task_runner.py:72} INFO - Started process 15007 to run task
[2024-08-27T09:39:27.542+0700] {standard_task_runner.py:104} INFO - Running: ['airflow', 'tasks', 'run', 'run_notebook_and_return_first_5_rows', 'print_first_5_rows_task', 'manual__2024-08-27T02:39:17.051240+00:00', '--job-id', '181', '--raw', '--subdir', 'DAGS_FOLDER/test_jupyter.py', '--cfg-path', '/tmp/tmpx25_xbdy']
[2024-08-27T09:39:27.543+0700] {standard_task_runner.py:105} INFO - Job 181: Subtask print_first_5_rows_task
[2024-08-27T09:39:27.582+0700] {task_command.py:467} INFO - Running <TaskInstance: run_notebook_and_return_first_5_rows.print_first_5_rows_task manual__2024-08-27T02:39:17.051240+00:00 [running]> on host LAPTOP-G8FSBU09.
[2024-08-27T09:39:27.641+0700] {taskinstance.py:3122} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='run_notebook_and_return_first_5_rows' AIRFLOW_CTX_TASK_ID='print_first_5_rows_task' AIRFLOW_CTX_EXECUTION_DATE='2024-08-27T02:39:17.051240+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-27T02:39:17.051240+00:00'
[2024-08-27T09:39:27.643+0700] {logging_mixin.py:190} INFO - Task instance is in running state
[2024-08-27T09:39:27.643+0700] {logging_mixin.py:190} INFO -  Previous state of the Task instance: queued
[2024-08-27T09:39:27.643+0700] {logging_mixin.py:190} INFO - Current task name:print_first_5_rows_task state:running start_date:2024-08-27 02:39:27.516361+00:00
[2024-08-27T09:39:27.643+0700] {logging_mixin.py:190} INFO - Dag name:run_notebook_and_return_first_5_rows and current dag run status:running
[2024-08-27T09:39:27.643+0700] {taskinstance.py:731} INFO - ::endgroup::
[2024-08-27T09:39:27.687+0700] {taskinstance.py:3301} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
  File "/home/user/.local/lib/python3.10/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
  File "/home/user/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
  File "/home/user/airflow/dags/test_jupyter.py", line 37, in extract_first_5_rows
    cleaned_df = pd.DataFrame(eval(cleaned_data_output))  # Use eval carefully, only with trusted sources
  File "<string>", line 9
    0                                  Software Engineer     Manassas, VA   8d   
                                                                            ^
SyntaxError: invalid decimal literal
[2024-08-27T09:39:27.699+0700] {logging_mixin.py:190} INFO - Task instance in failure state
[2024-08-27T09:39:27.699+0700] {logging_mixin.py:190} INFO - Task start:2024-08-27 02:39:27.516361+00:00 end:2024-08-27 02:39:27.698718+00:00 duration:0.182357
[2024-08-27T09:39:27.699+0700] {logging_mixin.py:190} INFO - Task:<Task(PythonOperator): print_first_5_rows_task> dag:<DAG: run_notebook_and_return_first_5_rows> dagrun:<DagRun run_notebook_and_return_first_5_rows @ 2024-08-27 02:39:17.051240+00:00: manual__2024-08-27T02:39:17.051240+00:00, state:running, queued_at: 2024-08-27 02:39:17.069067+00:00. externally triggered: True>
[2024-08-27T09:39:27.699+0700] {logging_mixin.py:190} INFO - Failure caused by invalid decimal literal (<string>, line 9)
[2024-08-27T09:39:27.700+0700] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=run_notebook_and_return_first_5_rows, task_id=print_first_5_rows_task, run_id=manual__2024-08-27T02:39:17.051240+00:00, execution_date=20240827T023917, start_date=20240827T023927, end_date=20240827T023927
[2024-08-27T09:39:27.713+0700] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-08-27T09:39:27.713+0700] {standard_task_runner.py:124} ERROR - Failed to execute job 181 for task print_first_5_rows_task (invalid decimal literal (<string>, line 9); 15007)
Traceback (most recent call last):
  File "/home/user/.local/lib/python3.10/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
  File "/home/user/.local/lib/python3.10/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 2995, in _run_raw_task
    return _run_raw_task(
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 3149, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 3173, in _execute_task
    return _execute_task(self, context, task_orig)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
  File "/home/user/.local/lib/python3.10/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
  File "/home/user/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
  File "/home/user/.local/lib/python3.10/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
  File "/home/user/airflow/dags/test_jupyter.py", line 37, in extract_first_5_rows
    cleaned_df = pd.DataFrame(eval(cleaned_data_output))  # Use eval carefully, only with trusted sources
  File "<string>", line 9
    0                                  Software Engineer     Manassas, VA   8d   
                                                                            ^
SyntaxError: invalid decimal literal
[2024-08-27T09:39:27.756+0700] {local_task_job_runner.py:261} INFO - Task exited with return code 1
[2024-08-27T09:39:27.766+0700] {taskinstance.py:3891} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-27T09:39:27.766+0700] {local_task_job_runner.py:240} INFO - ::endgroup::
